--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>First Game</title>
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
-    <script src="js/app.js"></script>
+    <script src="js/resources.js"></script>
+    <script src="js/engine.js"></script>
   </body>
 </html>
