--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <script src="js/resources.js"></script>
     <script src="js/engine.js"></script>
+    <script src="js/player.js"></script>
   </body>
 </html>
